--- a/BTrix-game-simple/public/index.html
+++ b/BTrix-game-simple/public/index.html
@@ -37,5 +37,5 @@
         </div>
     </div>
 </body>
-<script type="text/javascript" src="./main.js"></script>
+<script type="module" src="./main.js"></script>
 </html>
