--- a/BTrix-game-simple/public/index.html
+++ b/BTrix-game-simple/public/index.html
@@ -19,7 +19,13 @@
                 <div class="info">
                     <div class="local_time">已用时：<span id="local_time">0</span>秒</div>
                     <div class="local_score">已得分：<span id="local_score">0</span>分</div>
-                    <div class="local_result"></div>
+                </div>
+                <div class="result" id="waiting_wrap">
+                    <div>请等待另一名玩家进入房间...</div>
+                </div>
+                <div class="result" id="result_wrap">
+                    <div>Game Over!</div>
+                    <div id="result_text"></div>
                 </div>
             </div>
         </div>
@@ -29,13 +35,14 @@
                 <div id="remote_gameDiv" class="game"></div>
                 <div id="remote_nextDiv" class="next"></div>
                 <div class="info">
-                    <div class="remote_time">已用时：<span id="local_time">0</span>秒</div>
-                    <div class="remote_score">已得分：<span id="local_score">0</span>分</div>
-                    <div class="remote_result"></div>
+                    <div class="remote_time">已用时：<span id="remote_time">0</span>秒</div>
+                    <div class="remote_score">已得分：<span id="remote_score">0</span>分</div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="/socket.io/socket.io.js"></script>
 <script type="module" src="./main.js"></script>
+
 </html>
