修改增加底部干扰行逻辑

--- a/BTrix-game-simple/public/index.html
+++ b/BTrix-game-simple/public/index.html
@@ -44,5 +44,6 @@
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script type="module" src="./main.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/1.5.3/eruda.min.js"></script>
+<script>eruda.init();</script>
 </html>
